# agentic-sdlc

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION-STATUS.md  README.md  pyproject.toml
d8x-claude-design/: app.jsx  icons.jsx  index.html  sections.jsx  sections2.jsx  sim-app.jsx  sim-panels.jsx  sim-panels2.jsx  simulation.html
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: DECISIONS.md  VISION.md  WEEKLY-REVIEW.md  architecture-diagrams.md  d1-production-upgrade-plan.md  sample-legacy-app.txt
infra/docker/: Caddyfile  Dockerfile.backend  Dockerfile.frontend  cloudflared-config.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sql
scripts/: migrate_db.py  migrate_enums.sql  run_d4_prototype.py  run_d8x_demo.py  run_discovery_integration.py  smoke_test.py  test_design_flow.py  test_discovery.py  test_e2e_pipeline.py  test_full_flow.py  verify-setup.sh
simulation/: SIMULATION-DATA-GUIDE.md
src/: config.py
src/api/: main.py
src/context_store/: database.py  models.py  repository.py
src/orchestrator/: approval.py  pipeline.py
src/services/: archive_extractor.py  file_resolver.py  storage.py
src/tools/: embeddings.py  json_utils.py  llm.py
tests/unit/: test_agent_routes.py  test_approval_logic.py  test_approval_routes.py  test_archive_extractor.py  test_base_framework.py  test_code_structure_skill.py  test_context_store.py  test_d8x_pipeline.py  test_deep_extractors.py  test_design_agent.py  test_design_routes.py  test_design_skills.py  test_design_tasks.py  test_discover_agent.py  test_discover_skills.py  test_discover_tasks.py  test_discover_workflow.py  test_embeddings.py  test_ingest_agent.py  (+11 more)
(+151 files in other folders)
