[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "Agentic AI Workflow for SDLC - Multi-agent system for legacy application modernization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # AI/ML Core
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.2",
    # API Framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.14",
    # Data Validation & Config
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # HTTP & Resilience
    "httpx>=0.28",
    "tenacity>=9.0",
    # Document Processing
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "unstructured==0.22.27",
    # Object Storage
    "boto3>=1.35",
    # Redis
    "redis>=5.2",
    # Utilities
    "python-multipart>=0.0.17",
    "tiktoken>=0.8",
    "langchain-openai>=1.1.10",
    "langchain-ollama>=0.3",
    "reportlab>=4.4.10",
    "openai>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
